# nmpde-matrix-free-solver

./: .gitignore  CMakeLists.txt  README.md  run_simulation.sub  run_simulation_multi.sub
docs/: Doxyfile
include/: DTR.hpp  DTR_mf.hpp  DTR_mg.hpp  problem_data.hpp
report/latex/matrixfree report/: main.tex  mem_foot.tex  poly.tex  strong_comp.tex  strong_mg_mf.tex  time_dimension.tex
report/latex/matrixfree report/table/: convergence_mf.tex  dimension_time.tex
scripts/: plotter.py
src/: DTR.cpp  DTR_mf.cpp  DTR_mg.cpp  main.cpp  main_mf.cpp  main_mg.cpp  mpi.cpp
